--- a/app/assets/stylesheets/components/_counselor_rating.scss
+++ b/app/assets/stylesheets/components/_counselor_rating.scss
@@ -4,11 +4,8 @@
  margin: 5em auto;
  background: white;
  padding: auto;
-  box-shadow:
-       inset 0 -3em 3em rgba(0,0,0,0.1),
-             0 0  0 2px rgb(255,255,255),
-             0.3em 0.3em 1em rgba(0,0,0,0.3);
-//  border: 1px ligth gray;
+  box-shadow: 0px 1px 3px rgba(0,0,0,0.3);
+  border-radius: 3px;
 }
 .counselor-rating-btn {
    border-color: $kikoe-purple;
