--- a/app/assets/stylesheets/components/_counselors_new.scss
+++ b/app/assets/stylesheets/components/_counselors_new.scss
@@ -5,10 +5,8 @@
     padding: 5px;
     height: 600px;
     padding: 20px;
-    box-shadow:
-    inset 0 -3em 3em rgba(0,0,0,0.1),
-    //  0 0  0 2px rgb(255,255,255),
-    0.3em 0.3em 1em rgba(0,0,0,0.3);
+    box-shadow: 0px 1px 3px rgba(0,0,0,0.1);
+    border-radius: 3px;
 
     .book-a-session{
       font-family:Helvetica,Arial,sans-serif;
@@ -97,10 +95,8 @@
       transition-duration: 0.4s;
       color: white;
       background: $kikoe-blue;
-      box-shadow:
-      inset 0 -3em 3em rgba(0,0,0,0.1),
-      0 0  0 2px rgb(255,255,255),
-      0.3em 0.3em 1em rgba(0,0,0,0.3);
+      box-shadow: 0px 1px 3px rgba(0,0,0,0.1);
+      border-radius: 3px;
 
     }
     .form-check-input.is-valid ~ .form-check-label:hover {
