--- a/app/assets/stylesheets/components/_students_session_end.scss
+++ b/app/assets/stylesheets/components/_students_session_end.scss
@@ -30,7 +30,8 @@
   }
 
   .border-btn {
-    border-radius: 10px;
+    box-shadow: 0px 1px 3px rgba(0,0,0,0.1);
+    border-radius: 3px;
   }
 
   .category-selector2 + label {
