--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -46,17 +46,18 @@ footer {
   // background-color: #ad80fa;
   background-image: linear-gradient(45deg, rgba(246, 148, 183, 1) 5%, #fa8480 69%, rgba(246, 148, 183, 1) 98%);
   color: white;
-  box-shadow: 3px 3px 3px grey;
+  box-shadow: 0px 1px 3px rgba(0,0,0,0.3);
+  border-radius: 3px;
 }
 
 .sos-button {
   padding: 15px;
-  box-shadow: 3px 3px 3px #fa8480;
+  box-shadow: 0px 1px 3px rgba(250, 132, 128, 0.7);
   border-color: #fa8480;
   color: #f07974;
   font-weight: bold;
   background-color: white;
-  border-radius: 10%;
+  border-radius: 3px;
 }
 
 
@@ -67,7 +68,8 @@ footer {
   height: 315px;
   width: 80%;
   background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
-  box-shadow: 0px 0px 5px grey;
+  box-shadow: 0px 1px 3px rgba(0,0,0,0.3);
+  border-radius: 3px;
   color: white;
   img {
     border-radius: 50%;
