--- a/app/assets/stylesheets/pages/_students_bookings.scss
+++ b/app/assets/stylesheets/pages/_students_bookings.scss
@@ -4,7 +4,8 @@
   color: white;
   padding: 20px;
   text-align: center;
-  box-shadow: 0px 0px 5px grey;
+  box-shadow: 0px 1px 3px rgba(0,0,0,0.3);
+  border-radius: 3px;
 }
 
 .title {
@@ -20,7 +21,8 @@
 
 .session-card {
   background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
-  box-shadow: 0px 0px 5px grey;
+  box-shadow: 0px 1px 3px rgba(0,0,0,0.3);
+  border-radius: 3px;
   color: white;
   img {
     border-radius: 50%;
