--- a/app/views/users/_monthly_individual_report.html.erb
+++ b/app/views/users/_monthly_individual_report.html.erb
@@ -1,4 +1,4 @@
-<div class="title col-xs-8 col-sm-9 col-lg-9 mx-auto my-2" style='display: block'>
+<div class="title col-xs-8 col-sm-9 col-lg-9 mx-auto mt-5" style='display: block'>
   <h3>Weekly Report</h3>
 </div>
 <div class="weekly_report d-flex justify-content-center align-items-center">
@@ -18,5 +18,5 @@
   <%= column_chart @daily_reports.where('date >= ? AND date <= ?', (Time.now - 1.month).at_beginning_of_month, (Time.now - 1.month).at_end_of_month).group(:emotion).count
   .map {|key, value|[key, (value.to_f/Time.days_in_month((Time.now - 1.month).month, (Time.now - 1.month).year)*100).round(2)]}.to_h,
    min: '0%', max: '50%', suffix: "%", colors: ["rgba(145, 178, 253, 1)", "rgba(173, 128, 250, 1)"]%>
-  <p> <%=current_user.full_name%>'s mood percentage in <%= (Time.now - 1.month).strftime("%B") %></p>
+  <p> <%=@user.full_name%>'s mood percentage in <%= (Time.now - 1.month).strftime("%B") %></p>
 </div>
