--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -4,7 +4,7 @@
       <div class="suggested_message text-center">
         <p>Counselor was worried about you. Do you want to book a session?</p>
         <div class="students-choices style: 'display: block'">
-          <%= link_to 'Yes', new_booking_path, class: 'yes-button mx-auto my-5' %>
+          <%= link_to 'Yes', edit_booking_path(booking), class: 'yes-button mx-auto my-5' %>
           <%= link_to 'No', booking_path(booking),method: :delete, class: 'no-button mx-auto my-5' %>
         </div>
         <%# <%= link_to 'No', new_booking_path, class: 'yes-button mx-auto my-5', style: 'display: block' %>
