--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,34 +1,37 @@
 <div class="page">
   <%= render 'shared/navbar' %>
   <div class="body-frame">
-    <div class="booking-title my-3">
-      <h3 class="book-a-session">Book a Session</h3>
+    <div class="booking-title my-3 text-center">
+      <h2 class="book-a-session">Book a Session</h2>
     </div>
     <%# Counselor, Time, Mode %>
-    <div class="counselors-form mx-auto justify-content-center">
+    <div class="counselors-form mx-auto justify-content-center text-center">
       <%= simple_form_for @booking do |f| %>
-        <%= f.association :counselor, label: 'Counselors',
+        <%= f.association :counselor, label: 'Counselors',:required => false,
           as: :radio_buttons,
           collection_wrapper_tag: 'div',
-          collection_wrapper_class: 'category-wrapper d-flex',
+          collection_wrapper_class: 'category-wrapper d-flex justify-content-center',
           item_wrapper_class: 'category-counselor mx-3',
           input_html: {class: 'category-selector'},
           #how to change thne color of an image whe I choose one image
           collection: @counselors.map { |counselor| [cl_image_tag(counselor.photo.key, height: 100, width: 100, radius: 'max', title:counselor.full_name, "data-toggle": "tooltip", class: "category-counselor-img",background: '#f4f4f4'), counselor.id ] }
         %>
-        <%= f.input :start_time, as: :string, label: 'Start Time', input_html: {class: "datepicker"}%>
-        <%= f.input :end_time, as: :string, label: 'End Time', input_html: {class: "datepicker"} %>
-        <%= f.input :mode, label: 'Mode',
+        <div class='row text-center justify-content-center'>
+          <%= f.input :start_time, as: :string, label: 'Start Time', input_html: {class: "datepicker m-1"}%>
+          <%= f.input :mode, label: 'Mode',:required => false,
           as: :radio_buttons,
           collection_wrapper_tag: 'div',
-          collection_wrapper_class: 'category-wrapper d-flex',
-          item_wrapper_class: 'category-mode mx-3',
+          collection_wrapper_class: 'category-wrapper d-flex justify-content-between',
+          item_wrapper_class: 'category-mode m-2',
           input_html: {class: 'category-selector'},
           collection: [['Chatroom', 0], ['Video Call', 1], ['In-person', 2]]
         %>
-        <%= f.hidden_field :in_session, value: false, as: :boolean %>
-        <%= f.hidden_field :emergency, value: false, as: :boolean %>
-        <%= f.button :submit, 'Submit', class: 'new-submit-btn' %>
+          <%= f.hidden_field :in_session, value: false, as: :boolean %>
+          <%= f.hidden_field :emergency, value: false, as: :boolean %>
+        </div>
+        <div class="d-flex justify-content-center">
+          <%= f.button :submit, 'Submit', class: 'new-submit-btn' %>
+        </div>
       <% end %>
     </div>
   </div>
