rendering nav bar to student's dashboard & show page

--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,4 +1,5 @@
 <div class="page">
+  <%= render 'shared/navbar' %>
   <div class="body-frame">
     <% @suggested_bookings.each do |booking| %>
       <div class="suggested_message text-center">
