--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <div class="page">
+  <%= render 'shared/navbar' %>
   <div class="body-frame">
     <%= render "contact_form" %>
     <%= render "student_profile" %>
