created a new style component to the user chart weekly. Nested to use exclusive on the student banner homepage.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,6 +6,7 @@
         <%= render 'emotions_home', daily_emotion: @daily_emotion %>
       <% else %>
         <div class="flex-row">
+          <%= render 'weekly_individual_report' %>
           <p class='d-flex justify-content-center' style="padding-top: 1.5rem">Today's emotion has been recorded</p>
           <p class='d-flex justify-content-center'style="padding-top: 1.5rem">Thank you!</p>
         </div>
