--- a/app/assets/stylesheets/components/_student_profile.scss
+++ b/app/assets/stylesheets/components/_student_profile.scss
@@ -1,7 +1,7 @@
 .profile-card{
   padding: 10px;
   margin: 0 auto;
-  height: 475px;
+  height: 320px;
   width: 85%;
   background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
   box-shadow: 0px 0px 5px grey;
@@ -22,5 +22,9 @@
     padding: 10px 20px;
     width: 400px;
     margin: 0 20px;
+  }
+  .student-name{
+    text-align: center;
+    margin-top: 20px;
   }
 }
