--- a/app/views/users/_past_session.html.erb
+++ b/app/views/users/_past_session.html.erb
@@ -1,5 +1,5 @@
-<div class="title col-xs-8 col-sm-9 col-lg-9 mx-auto my-2" style='display: block'>
-  <h3 style= "font-size:20px">***Past Sessions***</h3>
+<div class="title col-xs-8 col-sm-9 col-lg-9 mx-auto mt-5" style='display: block'>
+  <h3>Past Sessions</h3>
 </div>
 <div class="container">
   <% bookings.each do |booking| %>
