--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,9 +6,10 @@
         <%= render 'emotions_home', daily_emotion: @daily_emotion %>
       <% else %>
         <div class="flex-row">
+          <p class='d-flex text-center'>Your emotion today, <%= Date.today.strftime("%A") %>, is <%= current_user.daily_emotions.last.emotion %></p>
           <%= render 'weekly_individual_report' %>
-          <p class='d-flex justify-content-center' style="padding-top: 1.5rem">Today's emotion has been recorded</p>
-          <p class='d-flex justify-content-center'style="padding-top: 1.5rem">Thank you!</p>
+          <%# <p class='d-flex justify-content-center' style="padding-top: 1.5rem">Today's emotion has been recorded</p>
+          <p class='d-flex justify-content-center'style="padding-top: 1.5rem">Thank you!</p> %>
         </div>
       <% end %>
     </div>
