--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,6 +5,12 @@
   color: white;
 }
 
+.daily-report-finished {
+  background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
+  padding: 10px;
+  color: white;
+}
+
 .emotions {
   i {
     font-size: 35px;
