--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,70 +1,71 @@
 <div class="page">
   <%= render 'shared/navbar' %>
   <div class="body-frame">
-    <div class="daily-report">
-      <% unless current_user&.emotion_today? %>
+    <% unless current_user&.emotion_today? %>
+      <div class="daily-report">
         <%= render 'emotions_home', daily_emotion: @daily_emotion %>
-      <% else %>
-        <div class="flex-row">
-          <p class='d-flex text-center'>Your emotion today, <%= Date.today.strftime("%A") %>, is <%= current_user.daily_emotions.last.emotion %></p>
-          <%= render 'weekly_individual_report' %>
-          <%# <p class='d-flex justify-content-center' style="padding-top: 1.5rem">Today's emotion has been recorded</p>
-          <p class='d-flex justify-content-center'style="padding-top: 1.5rem">Thank you!</p> %>
-        </div>
-      <% end %>
-    </div>
-    <h3 class='sos-text mt-3 text-center'>--- I need help now ---</h3>
-    <div class='sos m-3 p-4'>
-      <div class='online-counselors'>
-        <p style='margin-bottom: 0; margin-left: 16px'>Online counselors at your school:</p>
-        <%# My crazy code %>
-        <div id="carouselExampleControls" class="carousel slide d-flex" data-ride="carousel">
-          <% @counselors.each do |counselor| %>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <div class="counselor-pic ml-2"><%= cl_image_tag(counselor.photo.key, height: 70, width: 70, radius: 'max', background: '#f4f4f4') %></div>
-                <div class='notification-online badge badge-success'>  </div>
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          <% end %>
-        </div>
-        <%# end %>
-        <div class="d-flex p-2">
-          <% @counselors.each do |counselor| %>
-            <div class="counselor-pic ml-2">
-              <%= cl_image_tag(counselor.photo.key, height: 50, width: 50, radius: 'max', background: '#f4f4f4') %>
-            </div>
-            <div class='notification-online badge badge-success'>  </div>
-          <% end %>
-        </div>
       </div>
-      <div class="d-flex justify-content-center p-3 mx-5">
-        <div class='mx-3'>
-          <%= simple_form_for @booking do |f|  %>
-            <%= f.hidden_field :mode, value: 0 %>
-            <%= f.hidden_field :in_session, value: true, as: :boolean %>
-            <%= f.hidden_field :emergency, value: true, as: :boolean %>
-            <%= f.button :submit, 'Chatroom', class: 'sos-button btn btn-primary mx-2' %>
-          <% end %>
-        </div>
-        <div class='mx-3'>
-          <%= simple_form_for @booking do |f|  %>
-            <%= f.hidden_field :mode, value: 1 %>
-            <%= f.hidden_field :in_session, value: true %>
-            <%= f.hidden_field :emergency, value: true %>
-            <%= f.button :submit, 'Video call', class: 'sos-button btn btn-primary mx-2' %>
-          <% end %>
-        </div>
+    <% else %>
+      <div class="flex-row daily-report-finished">
+        <p class='d-flex text-center mt-4'>Your emotion today, <%= Date.today.strftime("%A") %>, is <%= current_user.daily_emotions.last.emotion %></p>
+        <%= render 'weekly_individual_report' %>
+        <%# <p class='d-flex justify-content-center' style="padding-top: 1.5rem">Today's emotion has been recorded</p>
+          <p class='d-flex justify-content-center'style="padding-top: 1.5rem">Thank you!</p> %>
+      </div>
+    <% end %>
+  </div>
+  <h3 class='sos-text mt-3 text-center'>--- I need help now ---</h3>
+  <div class='sos m-3 p-4'>
+    <div class='online-counselors'>
+      <p style='margin-bottom: 0; margin-left: 16px'>Online counselors at your school:</p>
+      <%# My crazy code %>
+      <div id="carouselExampleControls" class="carousel slide d-flex" data-ride="carousel">
+        <% @counselors.each do |counselor| %>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="counselor-pic ml-2"><%= cl_image_tag(counselor.photo.key, height: 70, width: 70, radius: 'max', background: '#f4f4f4') %></div>
+              <div class='notification-online badge badge-success'>  </div>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        <% end %>
+      </div>
+      <%# end %>
+      <div class="d-flex p-2">
+        <% @counselors.each do |counselor| %>
+          <div class="counselor-pic ml-2">
+            <%= cl_image_tag(counselor.photo.key, height: 50, width: 50, radius: 'max', background: '#f4f4f4') %>
+          </div>
+          <div class='notification-online badge badge-success'>  </div>
+        <% end %>
+      </div>
+    </div>
+    <div class="d-flex justify-content-center p-3 mx-5">
+      <div class='mx-3'>
+        <%= simple_form_for @booking do |f|  %>
+          <%= f.hidden_field :mode, value: 0 %>
+          <%= f.hidden_field :in_session, value: true, as: :boolean %>
+          <%= f.hidden_field :emergency, value: true, as: :boolean %>
+          <%= f.button :submit, 'Chatroom', class: 'sos-button btn btn-primary mx-2' %>
+        <% end %>
+      </div>
+      <div class='mx-3'>
+        <%= simple_form_for @booking do |f|  %>
+          <%= f.hidden_field :mode, value: 1 %>
+          <%= f.hidden_field :in_session, value: true %>
+          <%= f.hidden_field :emergency, value: true %>
+          <%= f.button :submit, 'Video call', class: 'sos-button btn btn-primary mx-2' %>
+        <% end %>
       </div>
     </div>
   </div>
-  <%= render 'shared/footer' %>
+</div>
+<%= render 'shared/footer' %>
 </div>
