created sweetify alert

--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -1,7 +1,15 @@
 .alert {
   position: fixed;
-  bottom: 16px;
+  top: 50%;
   right: 16px;
   z-index: 1000;
-  // display: none;
+  // // display: none;
+  //   padding: 16px 24px;
+  // display: flex;
+  // justify-content: space-between;
+  // align-items: center;
+  // background: white;
+  // box-shadow: 0 0 8px rgba(0,0,0,0.2);
+  // border-radius: 4px;
+  // margin: 8px;
 }
