--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,6 +3,9 @@
   background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
   padding: 130px 10px;
   color: white;
+  &.small {
+    padding: 10px;
+  }
 }
 
 .emotions {
