put the find help now inside of the card

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,15 +6,15 @@
         <%= render 'emotions_home', daily_emotion: @daily_emotion %>
       <% else %>
         <div class="flex-row">
-          <h4 class='d-flex text-center mt-4 justify-content-center'>Your emotion today, <%= Date.today.strftime("%A") %>, is <%= current_user.daily_emotions.last.emotion %></h4>
+          <h4 class='d-flex text-center mt-4 justify-content-center'>Your week so far</h4>
           <%= render 'weekly_individual_report' %>
           <%# <p class='d-flex justify-content-center' style="padding-top: 1.5rem">Today's emotion has been recorded</p>
           <p class='d-flex justify-content-center'style="padding-top: 1.5rem">Thank you!</p> %>
         </div>
       <% end %>
     </div>
-    <h3 class='sos-text mt-3 text-center'>--- I need help now ---</h3>
     <div class='sos m-3 p-4'>
+      <h3 class='sos-text mb-3 text-center' style="color: white">Find help now</h3>
       <div class='online-counselors'>
         <p style='margin-bottom: 0; margin-left: 16px'>Online counselors at your school:</p>
         <%# My crazy code %>
