--- a/app/views/users/_session_invitation.html.erb
+++ b/app/views/users/_session_invitation.html.erb
@@ -1,12 +1,12 @@
 <% @suggested_bookings.each do |booking| %>
   <div class="suggested_message text-center">
+    <h3><strong><%= booking.counselor.last_name %> <%= booking.counselor.first_name %></strong></h3>
+    <%= cl_image_tag(booking.counselor.photo.key, height: 100, width: 100, radius: 'max',class: "counselor-pic", background: '#f4f4f4') %>
     <p>Hi!👋🏻 I am worried about you. Do you want to share your problem with me?</p>
     <div class="students-choices display: block'">
       <%= link_to 'Yes', edit_booking_path(booking), class: 'yes-button' %>
       <%= link_to 'No', booking_path(booking),method: :delete, class: 'no-button' %>
     </div>
     <%# <%= link_to 'No', new_booking_path, class: 'yes-button mx-auto my-5', style: 'display: block' %>
-    <%= cl_image_tag(booking.counselor.photo.key, height: 100, width: 100, radius: 'max',class: "counselor-pic", background: '#f4f4f4') %>
-    <p><strong><%= booking.counselor.last_name %> <%= booking.counselor.first_name %></strong></p>
   </div>
 <% end %>
