--- a/app/views/counselors/_students_tabs.html.erb
+++ b/app/views/counselors/_students_tabs.html.erb
@@ -23,20 +23,24 @@
         </div>
       <% end %>
     <% end %>
-    <h4>Students in need of attention</h4>
+    <div class="title-sos col-xs-8 col-sm-9 col-lg-9 mx-auto my-2" style='display: block'>
+      <h4>Students in need of attention</h4>
+    </div>
     <% student_count_arr = @students.map do |student| %>
       <% verySadCount = 0 %>
       <%[student, student.daily_emotions.where('date >= ? AND date <= ?', (Date.today - 1.week).beginning_of_week, (Date.today - 1.week).end_of_week).map {|report| report.emotion == 'Very Sad' ? verySadCount += 1 : verySadCount = 0}]%>
     <% end %>
     <% student_count_arr.each do |arr| %>
       <% if arr[1].select {|num| num >=4 }.count != 0 %>
-      <div class="d-flex justify-content-center my-4">
-        <div class="attention_pic">
-          <%= cl_image_tag(arr[0].photo.key, height: 60, width: 60, radius: 'max', background: '#f4f4f4') %>
-          <p><%= arr[0].full_name%></p>
-        </div>
+      <div class="attention-card d-flex justify-content-around my-4">
+        <%= link_to user_path(arr[0]) do %>
+          <div class="attention_pic">
+            <%= cl_image_tag(arr[0].photo.key, height: 60, width: 60, radius: 'max', background: '#f4f4f4') %>
+            <p><%= arr[0].full_name%></p>
+          </div>
+        <% end %>
         <div class="attention_chart">
-          <%= line_chart @daily_reports.where(user: arr[0]).where('date >= ? AND date <= ?', (Date.today - 1.week).beginning_of_week, (Date.today - 1.week).end_of_week).group_by_day_of_week(:date, format: "%a").sum(:emotion), min: -1, max: 4, height: '180px', width: '200px'%>
+          <%= line_chart @daily_reports.where(user: arr[0]).where('date >= ? AND date <= ?', (Date.today - 1.week).beginning_of_week, (Date.today - 1.week).end_of_week).group_by_day_of_week(:date, format: "%a").sum(:emotion), min: -1, max: 4, height: '180px', width: '200px', colors:['rgb(226, 93, 93)']%>
         </div>
       </div>
       <% end %>
@@ -44,14 +48,16 @@
   </div>
   <div class="tab-pane fade py-3" id="converstions" role="tabpanel" aria-labelledby="converstion-tab">
     <% @past_student_session.each do |pair| %>
-      <div class="d-flex justify-content-center my-4">
+      <div class="attention-card d-flex justify-content-around my-4">
+      <%= link_to user_path(pair[0]) do %>
         <div class="progress_pic">
           <%= cl_image_tag(pair[0].photo.key, height: 80, width: 80, radius: 'max', background: '#f4f4f4') %>
           <p><%= pair[0].full_name %></p>
         </div>
+      <% end %>
         <div class="progress_chart">
             <% past_month_days = (Date.today - 1.month).day %>
-            <%= line_chart pair[0].daily_emotions.where('date >= ? AND date <= ?', (Date.today - 1.month).beginning_of_month, (Date.today - 1.month).end_of_month).group_by_week(:date).average(:emotion), height: '180px', width: '200px' %>
+            <%= line_chart pair[0].daily_emotions.where('date >= ? AND date <= ?', (Date.today - 1.month).beginning_of_month, (Date.today - 1.month).end_of_month).group_by_week(:date).average(:emotion), height: '180px', width: '200px', colors:["rgb(131, 207, 218)"] %>
         </div>
       </div>
     <% end %>
