--- a/app/views/counselors/_upcoming_session.html.erb
+++ b/app/views/counselors/_upcoming_session.html.erb
@@ -13,6 +13,6 @@
     </div>
   <% end %>
 <% else %>
-  <p class='ml-5'>No upcoming bookings!</p>
+  <p style='color: rgba(173, 128, 250, 1); text-align: center; margin: 20px auto;'>No upcoming bookings!</p>
 <% end %>
 <%#= render "counselors/2upcoming_session" %>
