--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -24,7 +24,7 @@
           </div>
         <% end %>
       <% else %>
-        <p class='ml-5'>No upcoming bookings!</p>
+        <p style='color: rgba(173, 128, 250, 1); text-align: center; margin: 20px auto;'>No upcoming bookings!</p>
       <% end %>
     </div>
     <div class="title col-xs-8 col-sm-9 col-lg-9 mx-auto my-2" style='display: block'>
