--- a/app/views/counselors/bookings.html.erb
+++ b/app/views/counselors/bookings.html.erb
@@ -2,7 +2,7 @@
   <%= render 'shared/navbar' %>
   <div class="body-frame">
     <%= render 'recently_booked' %>
-    <div class="title col-xs-8 col-sm-9 col-lg-9 mx-auto my-2" style='display: block'>
+    <div class="title col-xs-8 col-sm-9 col-lg-9 mx-auto" style='display: block; margin-top: 30px;'>
       <h3>Upcoming Session:</h3>
     </div>
     <div class="container">
