--- a/app/assets/stylesheets/components/_student_hp_chart.scss
+++ b/app/assets/stylesheets/components/_student_hp_chart.scss
@@ -22,3 +22,30 @@
     }
   }
 }
+
+.weekly_report {
+    .date_set{
+      height: 80px;
+      width: 12%;
+      margin: 10px 8px 0px 8px;
+      text-align: center;
+      vertical-align: middle;
+      i {
+        font-size: 25px;
+        background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
+        background-clip: text;
+        background-size: 100%;
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+      }
+      p {
+        font-size: 16px;
+        margin: 0;
+        background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
+        background-clip: text;
+        background-size: 100%;
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+      }
+    }
+  }
