--- a/app/assets/stylesheets/pages/_students_bookings.scss
+++ b/app/assets/stylesheets/pages/_students_bookings.scss
@@ -19,6 +19,18 @@
   font-weight: bold;
 }
 
+.description {
+  background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
+  background-clip: text;
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+  font-size: 14px;
+  margin: 5px;
+}
+
 .session-card {
   background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
   box-shadow: 0px 1px 3px rgba(0,0,0,0.3);
