--- a/app/assets/stylesheets/components/_counselors_new.scss
+++ b/app/assets/stylesheets/components/_counselors_new.scss
@@ -3,10 +3,10 @@
     background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
     justify-content: center;
     padding: 5px;
-    height: 600px;
     padding: 20px;
     box-shadow: 0px 1px 3px rgba(0,0,0,0.1);
     border-radius: 3px;
+    margin-top: 10px;
 
     .book-a-session{
       font-family:Helvetica,Arial,sans-serif;
