the Upcoming Session is apearing on mobile now

--- a/app/assets/stylesheets/components/_counselor_rating.scss
+++ b/app/assets/stylesheets/components/_counselor_rating.scss
@@ -18,8 +18,8 @@
   text-decoration: none;
 }
 @media(min-width:700px){
-.wrapper{
-display: grid;
-grid-template-columns: 1fr,2fr;
-}
+  .wrapper{
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  }
 }
