Weekly report styling on hp and student dashboard

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
         <%= render 'emotions_home', daily_emotion: @daily_emotion %>
       <% else %>
         <div class="flex-row">
-          <h1 class='d-flex text-center mt-4 justify-content-center'>Your week so far</h1>
+          <h2 class='d-flex text-center mt-4 justify-content-center' style='font-weight: bold'>Your week so far</h2>
           <%= render 'weekly_individual_report' %>
           <%# <p class='d-flex justify-content-center' style="padding-top: 1.5rem">Today's emotion has been recorded</p>
           <p class='d-flex justify-content-center'style="padding-top: 1.5rem">Thank you!</p> %>
