--- a/app/views/counselors/_students_tabs.html.erb
+++ b/app/views/counselors/_students_tabs.html.erb
@@ -24,7 +24,10 @@
       <% end %>
     <% end %>
     <div class="title-sos col-xs-8 col-sm-9 col-lg-9 mx-auto my-2" style='display: block'>
-      <h4>Students in need of attention</h4>
+      <h4>Students in Need of Attention</h4>
+    </div>
+    <div class="description-sos" style="margin-left: 10px">
+      <p>These are the students have been feeling down for quite a while now. Check in on them to make sure everything is ok!</p>
     </div>
     <% student_count_arr = @students.map do |student| %>
       <% verySadCount = 0 %>
@@ -50,9 +53,8 @@
     <div class="title col-xs-8 col-sm-9 col-lg-9 mx-auto my-2" style='display: block'>
       <h4>Progress of Students</h4>
     </div>
-    <div class="description">
-      <p>These are the students you once had sessions with.</p>
-      <p>Check their quarter reports to track their progress!</p>
+    <div class="description" style="margin-left: 10px">
+      <p>These are the students you once had sessions with. Check their quarter reports to track their progress!</p>
     </div>
     <% @past_student_session.each do |pair| %>
       <div class="attention-card d-flex justify-content-around my-4">
