Change color of individual monthly report and the order of the labels

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -10,9 +10,12 @@ $gray: #0E0000;
 $light-gray: #F4F4F4;
 
 $kikoe-white: rgba(249, 250, 253, 1);
+$kikoe-light-blue: rgb(180, 199, 243);
 $kikoe-blue: rgba(145, 178, 253, 1);
+$kikoe-blue: rgb(116, 154, 245);
 $kikoe-purple: rgba(173, 128, 250, 1);
 $kikoe-pink: rgba(246, 148, 183, 1);
 $kikoe-lightblue: rgba(205, 208, 246, 1);
-$kikoe-green: rgb(131, 207, 218);
+$kikoe-green: rgb(158, 232, 243);
+$kikoe-dark-green: rgb(131, 207, 218);
 $kikoe-red: rgb(226, 93, 93);
