--- a/app/views/users/_monthly_individual_report.html.erb
+++ b/app/views/users/_monthly_individual_report.html.erb
@@ -16,7 +16,8 @@
 <%# @daily_reports.where('date >= ? AND date <= ?', (Time.now - 1.month).at_beginning_of_month, (Time.now - 1.month).at_end_of_month).group(:emotion).count/User.all.count/Time.days_in_month((Time.now - 1.month).month, (Time.now - 1.month).year) %>
 <div class="chart mx-3 my-3">
   <%= column_chart @daily_reports.where('date >= ? AND date <= ?', (Time.now - 1.month).at_beginning_of_month, (Time.now - 1.month).at_end_of_month).group(:emotion).count
-  .map {|key, value|[key, (value.to_f/Time.days_in_month((Time.now - 1.month).month, (Time.now - 1.month).year)*100).round(2)]}.to_h,
-   min: '0%', max: '50%', suffix: "%", colors: ["rgba(145, 178, 253, 1)", "rgba(173, 128, 250, 1)"]%>
-  <p> <%=@user.full_name%>'s mood percentage in <%= (Time.now - 1.month).strftime("%B") %></p>
+  .map{|key, value| [DailyEmotion.emotions[key], value]}.sort!.to_h.map{|key, value| [DailyEmotion.emotions.key(key), (value.to_f/Time.days_in_month((Time.now - 1.month).month, (Time.now - 1.month).year)*100).round(2)]}.to_h,
+  min: '0%', max: '50%', suffix: "%",
+  colors: ["rgb(226, 93, 93)","rgba(246, 148, 183, 1)","rgb(180, 199, 243)", "rgb(158, 232, 243)","rgb(131, 207, 218)"]%>
+  <p class='description'> <%=@user.full_name%>'s mood percentage in <%= (Time.now - 1.month).strftime("%B") %></p>
 </div>
