--- a/app/assets/stylesheets/components/_counselors_new.scss
+++ b/app/assets/stylesheets/components/_counselors_new.scss
@@ -22,6 +22,7 @@
       -webkit-text-fill-color: transparent;
       -moz-text-fill-color: transparent;
       font-weight: bold;
+      text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.06);
 
     }
     .category-wrapper {
