--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -2,7 +2,7 @@
   <%= render 'shared/navbar' %>
   <div class="body-frame">
     <%= link_to 'Book a Session', new_booking_path, class: 'book-button mx-auto my-5', style: 'display: block' %>
-    <%= render 'recently_booked' %>
+    <%# render 'recently_booked' %>
     <div class="title col-xs-8 col-sm-9 col-lg-9 mx-auto my-2" style='display: block'>
       <h3>Upcoming Session:</h3>
     </div>
