--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -26,7 +26,7 @@
           collection: [['Chatroom', 0], ['Video Call', 1], ['In-person', 2]]
         %>
           <%= f.hidden_field :in_session, value: false, as: :boolean %>
-          <%= f.hidden_field :emergency, value: false, as: :boolean %>
+          <%# f.hidden_field :emergency, value: false, as: :boolean %>
         </div>
         <div class="d-flex justify-content-center">
           <%= f.button :submit, 'Submit', class: 'new-submit-btn' %>
