--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -47,7 +47,7 @@
   border-radius: 5px;
   max-width: 77%;
     p {
-      word-break: break-all;
+      word-break: break-word;
       margin-bottom: 0;
     }
 }
@@ -67,7 +67,7 @@
   border-radius: 5px;
   max-width: 77%;
       p {
-      word-break: break-all;
+      word-break: break-word;
       margin-bottom: 0;
     }
 }
