--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -17,9 +17,7 @@
               <p>with <strong><%= booking.counselor.last_name %> <%= booking.counselor.first_name %></strong></p>
             </div>
             <div class="counselor_info col-xs-6 col-sm-6 col-lg-6 text-left">
-              <% date = booking.start_time %>
-              <p><strong>Date:</strong> <%= date.year %>/<%= date.month %>/<%= date.day %> <%= date.hour %>:<%= date.min == 0 ? '00' : date.min %></p>
-              <p><strong>Mode:</strong> <%= booking.mode %></p>
+              <%= render 'shared/session_card_info', booking: booking %>
             </div>
           </div>
         <% end %>
@@ -38,9 +36,7 @@
             <p>with <strong><%= booking.counselor.last_name %> <%= booking.counselor.first_name %></strong></p>
           </div>
           <div class="counselor_info col-xs-6 col-sm-6 col-lg-6 text-left">
-            <% date = booking.start_time %>
-            <p><strong>Date:</strong> <%= date.year %>/<%= date.month %>/<%= date.day %> <%= date.hour %>:<%= date.min == 0 ? '00' : date.min %></p>
-            <p><strong>Mode:</strong> <%= booking.mode %></p>
+            <%= render 'shared/session_card_info', booking: booking %>
           </div>
         </div>
       <% end %>
