--- a/app/views/counselors/_upcoming_session.html.erb
+++ b/app/views/counselors/_upcoming_session.html.erb
@@ -1,18 +1,21 @@
-<% if @upcoming.any? %>
-  <% @upcoming.each do |booking| %>
-    <div class="session-card row mx-auto my-3 p-3 justify-content-center">
-      <div class="counselor_pic col-xs-2 col-sm-3 col-lg-3 text-center">
-        <%= cl_image_tag(booking.user.photo.key, height: 80, width: 80, radius: 'max', background: '#f4f4f4') %>
-        <p>with <strong><%= booking.user.last_name %> <%= booking.user.first_name %></strong></p>
+<div class="title col-xs-8 col-sm-9 col-lg-9 mx-auto" style='display: block; margin-top: 30px;'>
+  <h3>Upcoming Session:</h3>
+</div>
+<div class="container">
+  <% if @upcoming.any? %>
+    <% @upcoming.each do |booking| %>
+      <div class="session-card row mx-auto my-3 p-3 justify-content-center">
+        <div class="counselor_pic col-xs-2 col-sm-3 col-lg-3 text-center">
+          <%= cl_image_tag(booking.user.photo.key, height: 80, width: 80, radius: 'max', background: '#f4f4f4') %>
+          <p>with <strong><%= booking.user.last_name %> <%= booking.user.first_name %></strong></p>
+        </div>
+        <div class="counselor_info col-xs-6 col-sm-6 col-lg-6 text-left justify-content-around">
+          <%= render 'shared/session_card_info', booking: booking %>
+        </div>
       </div>
-      <div class="counselor_info col-xs-6 col-sm-6 col-lg-6 text-left">
-        <% date = booking.start_time %>
-        <p><strong>Date:</strong> <%= date.year %>/<%= date.month %>/<%= date.day %> <%= date.hour %>:<%= date.min == 0 ? '00' : date.min %></p>
-        <p><strong>Mode:</strong> <%= booking.mode %></p>
-      </div>
-    </div>
+    <% end %>
+  <% else %>
+    <p style='color: rgba(173, 128, 250, 1); text-align: center; margin: 20px auto;'>No upcoming bookings!</p>
   <% end %>
-<% else %>
-  <p style='color: rgba(173, 128, 250, 1); text-align: center; margin: 20px auto;'>No upcoming bookings!</p>
-<% end %>
+</div>
 <%#= render "counselors/2upcoming_session" %>
