--- a/app/assets/stylesheets/components/_counselors_new.scss
+++ b/app/assets/stylesheets/components/_counselors_new.scss
@@ -83,7 +83,7 @@
       border-radius: 4px;
       color: white;
       margin-top: 15px;
-      box-shadow: 0px 1px 3px rgb(0 0 0 / 10%);
+      box-shadow: 0px 1px 3px rgba(0,0,0,0.1);
     }
     .new-submit-btn:hover{
       background-color: #ad80fa;
