Book session more visible

--- a/app/assets/stylesheets/components/_counselors_new.scss
+++ b/app/assets/stylesheets/components/_counselors_new.scss
@@ -14,7 +14,7 @@
       font-weight: 600;
       line-height: 62px;
       text-align: center;
-      background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
+      background-image: linear-gradient(45deg, #814fd8 5%, #6189e7 69%, #8d95ff 98%);
       background-clip: text;
       background-size: 100%;
       -webkit-background-clip: text;
