--- a/app/views/bookings/_chatroom.html.erb
+++ b/app/views/bookings/_chatroom.html.erb
@@ -9,7 +9,7 @@
       <%= simple_form_for @booking do |f|  %>
         <%= f.hidden_field :in_session, value: false, as: :boolean %>
         <div class="top-head-button">
-          <%= f.button :submit, 'End Session', class: 'btn btn-sm btn-primary mx-3', style: 'color: rgba(249, 250, 253, 1)' %>
+          <%= f.button :submit, 'End Session', class: 'btn btn-sm btn-primary mx-3', style: 'color: rgba(249, 250, 253, 1); box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2)' %>
         </div>
       <% end %>
     <% end %>
