--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -12,7 +12,14 @@
   i {
     font-size: 35px;
     margin: 0px 10px;
+    // box-shadow: 5px 7px 16px rgba(0,0, 0, .3);
+    border-radius: 50%;
+
   }
+  i:active {
+  /*fixed*/
+//   box-shadow: none;
+ }
 }
 
 footer {
