--- a/app/assets/stylesheets/components/_students_session_end.scss
+++ b/app/assets/stylesheets/components/_students_session_end.scss
@@ -1,4 +1,30 @@
+.rating-container{
+  margin: 110px 0;
+}
 .rating-card{
+  padding: 10px;
+  margin: 0 auto;
+  height: 380px;
+  width: 90%;
+  background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
+  box-shadow: 0px 1px 3px rgba(0,0,0,0.3);
+  border-radius: 3px;
+  color: white;
+  img {
+    border-radius: 50%;
+  }
+  a {
+    text-align: center;
+    color: white;
+    padding: 10px 20px;
+    width: 400px;
+    margin: 0 20px;
+  }
+
+  h2 {
+    color: white;
+  }
+
   .category-wrapper2 {
     // justify-content: space-between;
     display: row;
@@ -9,6 +35,7 @@
   .category-counselor {
     flex: 0 0 30%;
     text-align: center;
+    width: 100%;
   }
 
   .category-selector2 {
@@ -25,31 +52,35 @@
   }
 
   .wrapperbtn {
-    margin: 5px;
-    padding: 15px 30px;
+    margin: 5px 15px;
+    padding: 10px 20px;
   }
 
   .border-btn {
-    box-shadow: 0px 1px 3px rgba(0,0,0,0.1);
+    box-shadow: 0 0 4px rgb(235, 104, 150);
     border-radius: 3px;
   }
 
   .category-selector2 + label {
     display: block;
     cursor: pointer;
-    width: 100%;
+    width: 50%;
+    margin: 10px auto;
     font-size: 12px;
     text-align: left;
     padding: 5px;
+    border: 0;
     border-radius: 4px;
     text-align: center;
     transition-duration: 0.4s;
     color: white;
     background: $kikoe-blue;
-    box-shadow:
-    inset 0 -3em 3em rgba(0,0,0,0.1),
-    0 0  0 2px rgb(255,255,255),
-    0.3em 0.3em 1em rgba(0,0,0,0.3);
+    // box-shadow:
+    // inset 0 -3em 3em rgba(0,0,0,0.1),
+    // 0 0  0 2px rgb(255,255,255),
+    // 0.3em 0.3em 1em rgba(0,0,0,0.3);
+    // border: 1px solid rgb(80, 125, 230);
+    box-shadow: 0 0 5px rgb(180, 199, 243);
   }
 
   label{
@@ -68,6 +99,7 @@
   .col-form-label {
     font-weight: 600;
     color: white;
+    text-shadow: 0 0 1px rgb(99, 123, 179);
   }
   .category-selector2:checked + label {
     // color: $kikoe-blue !important;
