--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -44,7 +44,7 @@ $kikoe-red: rgb(226, 93, 93);
   background-color:rgb(243, 7, 46);
 }
 .bg-neutral{
-  background-color: #597506;
+  background-color: #74931b;
 }
 .bg-happy{
   background-color: #017773;
