--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -14,12 +14,10 @@
     margin: 0px 10px;
     // box-shadow: 5px 7px 16px rgba(0,0, 0, .3);
     border-radius: 50%;
+    line-height: 32px;
+    width: 33px;
 
   }
-  i:active {
-  /*fixed*/
-//   box-shadow: none;
- }
 }
 
 footer {
