--- a/app/views/bookings/_chatroom.html.erb
+++ b/app/views/bookings/_chatroom.html.erb
@@ -19,7 +19,7 @@
     <%# messagesContainer %>
     <div id="messages" data-booking-id="<%= @booking.id %>" data-user-id="<%=current_counselor&.id || current_user&.id%>">
       <div class="text-center my-2">
-        <small><%= @booking.created_at.strftime("%a %b %e") %></small>
+        <small><%= @booking.created_at.in_time_zone("Tokyo").strftime("%a %b %e") %></small>
       </div>
       <% @booking.messages.each do |message| %>
         <%= render 'messages/message', message: message, sender: message.sender == current_counselor || message.sender == current_user %>
