--- a/app/assets/stylesheets/pages/_counselors_dashboard.scss
+++ b/app/assets/stylesheets/pages/_counselors_dashboard.scss
@@ -7,6 +7,7 @@
   border-radius: 5px;
   padding: 10px;
   flex-grow: 1;
+  text-shadow: 0 0 1px rgb(99, 123, 179);
   p {
     font-size: 14px;
     margin-top: 20px;
@@ -28,6 +29,7 @@
   border-radius: 5px;
   padding: 10px;
   flex-grow: 1;
+  text-shadow: 0 0 1px rgb(99, 123, 179);
   p {
     font-size: 14px;
     margin-top: 20px;
