--- a/app/views/bookings/_counselor_rating.html.erb
+++ b/app/views/bookings/_counselor_rating.html.erb
@@ -1,36 +1,41 @@
-<div class="container w-100">
-  <div class="wrapper text-center w-100">
-    <h3 class="session-ended pt-5">The session has ended.</h3>
-    <div class="user_pic text-center pt-5">
-      <%= cl_image_tag(@booking.user.photo.key, height: 80, width: 80, radius: 'max', style: "border-radius: 50%") %>
-      <p class="student-name"><%= @booking.user.first_name %> <%= @booking.user.last_name %> </p>
-    </div>
-    <% if @booking.rating.present? %>
-      <p>Student's rating is <strong><%= @booking.rating %> / 5</strong>.</p>
-      <% if @booking.rating == 1%>
-        <p><%= @booking.user.first_name %> <%= @booking.user.last_name %> is still feeling <strong>very bad</strong>.</p>
-      <% elsif @booking.rating == 2 %>
-        <p><%= @booking.user.first_name %> <%= @booking.user.last_name %> is <strong>not really</strong> feeling well.</p>
-      <% elsif @booking.rating == 3 %>
-        <p><%= @booking.user.first_name %> <%= @booking.user.last_name %> is feeling <strong>slightly better</strong>.</p>
-      <% elsif @booking.rating == 4  %>
-        <p><%= @booking.user.first_name %> <%= @booking.user.last_name %> is feeling <strong>better.</strong></p>
-      <% else @booking.rating ==  5%>
-        <p><%= @booking.user.first_name %> <%= @booking.user.last_name %> is really feeling <strong>much better</strong>.</p>
-      <% end %>
-    <% end %>
-    <p>
-      <a class="counselor-rating-btn " data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-        Add a note
-      </a>
-    </p>
-    <div class="collapse ml-3 mr-3" id="collapseExample">
-      <div class="card card-body">
-        <%= render "note" %>
+<div class='rating-container'>
+  <div class="title col-xs-8 col-sm-9 col-lg-9 mx-auto my-3 text-center" style='display: block'>
+    <h2>Session has ended</h2>
+  </div>
+  <div class="add-note-card">
+    <div>
+      <div class="user_pic text-center">
+        <%= cl_image_tag(@booking.user.photo.key, height: 80, width: 80, radius: 'max', style: "border-radius: 50%") %>
+        <p class="student-name"><%= @booking.user.first_name %> <%= @booking.user.last_name %> </p>
+      </div>
+      <div class="rating-text">
+        <% if @booking.rating.present? %>
+          <p>Student's rating is <strong><%= @booking.rating %> / 5</strong></p>
+          <% if @booking.rating == 1%>
+            <p><%= @booking.user.first_name %> <%= @booking.user.last_name %> is still<br>feeling <strong>very bad</strong></p>
+          <% elsif @booking.rating == 2 %>
+            <p><%= @booking.user.first_name %> <%= @booking.user.last_name %> is <strong>still not</strong><br>feeling too well</p>
+          <% elsif @booking.rating == 3 %>
+            <p><%= @booking.user.first_name %> <%= @booking.user.last_name %> is feeling<br><strong>slightly better</strong></p>
+          <% elsif @booking.rating == 4  %>
+            <p><%= @booking.user.first_name %> <%= @booking.user.last_name %> is feeling<br><strong>better</strong></p>
+          <% else @booking.rating ==  5%>
+            <p><%= @booking.user.first_name %> <%= @booking.user.last_name %> is feeling<br><strong>much better</strong></p>
+          <% end %>
+        <% end %>
+      </div>
+      <p class="counselor-rating-btn">
+        <a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+          Add note
+        </a>
+      </p>
+      <div class="collapse ml-3 mr-3" id="collapseExample">
+        <div class="card card-body">
+          <%= render "note" %>
+        </div>
       </div>
     </div>
   </div>
-</div>
 </div>
 <%# <div class="note-btn">
   <%= link_to "Add a note", "", class: "btn btn-ghost" %>
